// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoLinks Должен оставить адрес как есть, если не совпадают geocoder и address 1`] = `
<section
  className="geoLinks"
>
  <div
    className="addressContainer"
  >
    Москва, Шелепихинский тупик
  </div>
</section>
`;

exports[`GeoLinks Должен разбить адрес на составные части ( Город, улица, дом... ), когда есть данные 1`] = `
<section
  className="geoLinks"
>
  <div
    className="addressContainer"
  >
    <div
      className="addressLink"
      key="Москва,"
    >
      Москва,
    </div>
    <div
      className="addressLink"
      key="1-й Колобовский переулок,"
    >
      1-й Колобовский переулок,
    </div>
    <div
      className="addressLink"
      key="17с1"
    >
      17с1
    </div>
  </div>
</section>
`;
